@@ -7,6 +7,7 @@ export(expand.table)
 export(extract.item)
 export(fitIndices)
 export(fscores)
+export(imputeMissing)
 export(itemfit)
 export(iteminfo)
 export(itemplot)
